<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/main_page_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:maxHeight="300dp"
                    android:minHeight="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_fon_0" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <!-- Devis -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            style="@style/devis_text"
                            android:text="@string/devis_1"
                            android:textColor="@color/black"
                            android:background="@color/white" />
                        <TextView
                            style="@style/devis_text"
                            android:text="@string/devis_2"
                            android:textColor="@color/white"
                            android:background="@color/black" />
                        <TextView
                            style="@style/devis_text"
                            android:text="@string/devis_3"
                            android:textColor="@color/black"
                            android:background="@color/white" />
                    </LinearLayout>
                    <TextView
                        style="@style/devis_text"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/devis_4"
                        android:textColor="@color/black"
                        android:background="@color/white" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/fon_dark_grey">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:textAlignment="center"
                        android:textColor="@color/text_gray_dark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail_data"
                        android:textAlignment="center"
                        android:textColor="@color/text_gray_light"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support"
                        android:textAlignment="center"
                        android:textColor="@color/text_gray_dark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_data"
                        android:textAlignment="center"
                        android:textColor="@color/text_gray_light"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/take_maney"
                        android:textColor="@color/text_gray_dark"
                        android:textAlignment="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/visa"
                                android:scaleType="fitCenter"
                                android:padding="15dp"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/mastercard"
                                android:scaleType="fitCenter"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/privat24"
                                android:scaleType="fitCenter"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/wayforpay"
                                android:scaleType="fitCenter"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>


                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_name"
                        android:textAlignment="center"
                        android:textColor="@color/text_gray_light"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:id="@+id/btn_public_offer">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/public_ofert"
                                android:textAlignment="center"
                                android:textColor="@color/text_gray_light" />
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/text_gray_dark"/>
                        </LinearLayout>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>