<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basketPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty_basket_place"/>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/items_in_basket_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_purchases"
                    android:textColor="@color/black"
                    android:textSize="12pt"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="20dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black"/>
                </RelativeLayout>
            </LinearLayout>

            <!-- List items -->
            <LinearLayout
                android:id="@+id/items_in_basket_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <!-- Delimiter -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"/>


            <!-- Promo code -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_code"
                    android:textSize="8pt"
                    android:textColor="@color/text_gray_dark"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:background="@drawable/button_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/apply"
                        android:gravity="center"
                        android:background="@drawable/button_black"
                        android:textColor="@color/white"
                        android:textSize="8pt"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>

            <!-- Cost -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/cost_of_goods"
                    android:textSize="8pt"
                    android:textColor="@color/text_gray_dark"/>
                <TextView
                    android:id="@+id/items_in_basket_items_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="2 100 RUB"
                    android:textSize="8pt"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/cost_of_delivery"
                    android:textSize="8pt"
                    android:textColor="@color/text_gray_dark"/>
                <TextView
                    android:id="@+id/items_in_basket_deliver_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="2 100 RUB"
                    android:textSize="8pt"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/cost_result"
                    android:textSize="8pt"
                    android:textColor="@color/text_gray_dark"/>
                <TextView
                    android:id="@+id/items_in_basket_cost_result"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="2 100 RUB"
                    android:textSize="10pt"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <!-- Button apply -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout"
                    android:background="@drawable/button_black"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />

            </RelativeLayout>

            <!-- Space -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>